2004-12-29  Eric B. Weddington  <ericw@evcohs.com>

    * include/avr/sleep.h: Fix bugs #6352, #10489, #11425.
    * NEWS: Update bugs fixed list.

2004-12-28  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/vfprintf.c: Fix zero-padding when precision
	is given (savannah bug #9345)

2004-12-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.in: Mark the branch as being pre-release.

2004-12-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/fdevopen.c: document the use of calloc()
	[fix for savannah bug #11275]

2004-12-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* NEWS: Update, merge all fixes from 1.0 branch.

2004-12-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/main_page.dox: Mention all newly supported devices.
	* doc/api/using-tools.dox: Mention all newly supported devices.

2004-12-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
[Contributed by Frederik Rouleau <frouleau .at. naotek .dot. com>]

	* configure.in: move ATtiny2313 and ATtiny13 from avr5 to
	avr2 (by now, until a more appropriate solution can be found).

2004-12-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/delay.h: Document the requirement of F_CPU.

2004-12-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/delay.h: Move _delay_ms and _delay_us to double.

2004-12-21  Eric B. Weddington  <ericw@evcohs.com>

	* include/avr/iomx8.h: Add the EEARH register definition for the 
	mega48.
	[Fix for bug #11242.]

2004-12-21  Eric B. Weddington  <ericw@evcohs.com>

	* include/avr/iom16.h: Add USART* signal names to match datasheet.
	[Fix for bug #11315, mentioned in comment.]

2004-12-21  Eric B. Weddington  <ericw@evcohs.com>

	* include/avr/iom32.h: Add USART* signal names to match datasheet.
	[Fix for bug #11315]

2004-12-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo/Makefile: Default to an ATmega8 now.

2004-12-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.in: Enable man page building.
	* doc/api/Makefile.am: (ditto)