@@ -1,3 +1,9 @@
+2004-12-30  Eric B. Weddington  <ericw@evcohs.com>
+
+    * include/avr/iom128.h: Add USART* signal names to match datasheet.
+    [Fix for bug #11405]
+    * NEWS: Update bugs fixed list.
+
 2004-12-29  Eric B. Weddington  <ericw@evcohs.com>
 
     * include/avr/sleep.h: Fix bugs #6352, #10489, #11425.
